syntax = "proto3";

package yandex.cloud.servicename.v1;

import "google/protobuf/timestamp.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/_templates/servicename/v1;servicename";
option java_package = "yandex.cloud.api.servicename.v1";

// A resource name. For details about the concept, see [documentation](/docs/service-name/concepts/resource-name).
message ResourceName {

  enum Status {
    STATUS_UNSPECIFIED = 0;

    // Resource name is being created.
    CREATING = 1;

    // Resource name is ready to use.
    READY = 2;

    // Resource name encountered a problem and cannot operate.
    ERROR = 3;

    // Resource name is being deleted.
    DELETING = 4;
  }

  // ID of the resource name. Generated at creation time.
  string id = 1;

  // ID of the folder that the resource name belongs to.
  string folder_id = 2;

  // Creation timestamp.
  google.protobuf.Timestamp created_at = 3;

  // Name of the resource name.
  // The name is unique within the folder.
  string name = 4;

  // Description of the resource name.
  string description = 5;

  // Resource name labels as `key:value` pairs.
  map<string, string> labels = 6;

  // ID of the availability zone where the resource name resides.
  string zone_id = 7;

  // Status of the resource name.
  Status status = 8;
}
